test/TestSuite/Syntax/Errors/unknown_scenario_id.tjp
project test "Test" "1.0" 2007-03-25 +2m

resource r "R" {
# MARK: error 5 unknown_scenario_id 
  foo:workinghours mon 8:00 - 10:00
}
